# dcmSorter

./: CMakeLists.txt  dcmsorter.cpp  dcmsorter.h  dcmsorter.ui  main.cpp  myMacro.h
tixml/: tinyxml.cpp
